--- a/Source/Examples/SQLite/Consumer/SQLiteConsumerAsync/packages.config
+++ b/Source/Examples/SQLite/Consumer/SQLiteConsumerAsync/packages.config
@@ -6,48 +6,50 @@
   <package id="App.Metrics.Core" version="4.3.0" targetFramework="net472" />
   <package id="App.Metrics.Formatters.Ascii" version="4.3.0" targetFramework="net472" />
   <package id="App.Metrics.Formatters.Json" version="4.3.0" targetFramework="net472" />
-  <package id="DotNetWorkQueue" version="0.7.4" targetFramework="net472" />
-  <package id="DotNetWorkQueue.AppMetrics" version="0.7.4" targetFramework="net472" />
-  <package id="DotNetWorkQueue.Transport.RelationalDatabase" version="0.7.4" targetFramework="net472" />
-  <package id="DotNetWorkQueue.Transport.Shared" version="0.7.4" targetFramework="net472" />
-  <package id="DotNetWorkQueue.Transport.SQLite" version="0.7.4" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue" version="0.8.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue.AppMetrics" version="0.8.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue.Transport.RelationalDatabase" version="0.8.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue.Transport.Shared" version="0.8.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue.Transport.SQLite" version="0.8.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.TimeProvider" version="10.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
-  <package id="OpenTelemetry" version="1.7.0" targetFramework="net472" />
-  <package id="OpenTelemetry.Api" version="1.7.0" targetFramework="net472" />
-  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.7.0" targetFramework="net472" />
-  <package id="Polly" version="8.2.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
+  <package id="OpenTelemetry" version="1.14.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api" version="1.14.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.14.0" targetFramework="net472" />
+  <package id="Polly" version="8.6.5" targetFramework="net472" />
   <package id="Polly.Caching.Memory" version="3.0.2" targetFramework="net472" />
   <package id="Polly.Contrib.Simmy" version="0.3.0" targetFramework="net472" />
   <package id="Polly.Contrib.WaitAndRetry" version="1.1.1" targetFramework="net472" />
-  <package id="Polly.Core" version="8.2.1" targetFramework="net472" />
-  <package id="SimpleInjector" version="5.4.4" targetFramework="net472" />
-  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="Polly.Core" version="8.6.5" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.5.0" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
-  <package id="System.Data.SQLite.Core" version="1.0.118.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="8.0.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="10.0.1" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="10.0.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="10.0.1" targetFramework="net472" />
+  <package id="System.Text.Json" version="10.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
 </packages>
