--- a/Source/Examples/Shared/ConsoleSharedCommands/packages.config
+++ b/Source/Examples/Shared/ConsoleSharedCommands/packages.config
@@ -7,46 +7,47 @@
   <package id="App.Metrics.Formatters.Ascii" version="4.3.0" targetFramework="net472" />
   <package id="App.Metrics.Formatters.Json" version="4.3.0" targetFramework="net472" />
   <package id="App.Metrics.Reporting.Console" version="4.3.0" targetFramework="net472" />
-  <package id="DotNetWorkQueue" version="0.7.4" targetFramework="net472" />
-  <package id="DotNetWorkQueue.AppMetrics" version="0.7.4" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue" version="0.8.0" targetFramework="net472" />
+  <package id="DotNetWorkQueue.AppMetrics" version="0.8.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.TimeProvider" version="10.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
-  <package id="OpenTelemetry" version="1.7.0" targetFramework="net472" />
-  <package id="OpenTelemetry.Api" version="1.7.0" targetFramework="net472" />
-  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.7.0" targetFramework="net472" />
-  <package id="Polly" version="8.2.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
+  <package id="OpenTelemetry" version="1.14.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api" version="1.14.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.14.0" targetFramework="net472" />
+  <package id="Polly" version="8.6.5" targetFramework="net472" />
   <package id="Polly.Caching.Memory" version="3.0.2" targetFramework="net472" />
-  <package id="Polly.Core" version="8.2.1" targetFramework="net472" />
-  <package id="Serilog" version="3.1.1" targetFramework="net472" />
-  <package id="Serilog.Sinks.Console" version="5.0.1" targetFramework="net472" />
-  <package id="SimpleInjector" version="5.4.4" targetFramework="net472" />
+  <package id="Polly.Core" version="8.6.5" targetFramework="net472" />
+  <package id="Serilog" version="4.3.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="6.1.1" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.5.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="10.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net472" />
@@ -56,20 +57,21 @@
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="10.0.1" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -81,14 +83,15 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="10.0.1" targetFramework="net472" />
+  <package id="System.Text.Json" version="10.0.1" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="10.0.1" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
 </packages>
